# pyrepl.nvim

./: README.md  pyproject.toml
doc/: pyrepl.txt
lua/pyrepl/: config.lua  core.lua  image.lua  init.lua  python.lua  send.lua  theme.lua  types.lua
lua/pyrepl/providers/: placeholders.lua
src/pyrepl/: console.py
